# shiritori-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Protocol.md  README.md  client.py  main.cpp  vcpkg.json
controller/: CMakeLists.txt  games_controller.cpp  info_controller.cpp  task_queue.cpp
controller/include/: games_controller.hpp  info_controller.hpp  task_queue.hpp
controller/interfaces/: igames_controller.hpp
data/: usersDb.db
network/: router.cpp  server.cpp  session.cpp
network/include/: router.hpp  server.hpp  session.hpp
repo/: CMakeLists.txt  games_repo.cpp  users_repo.cpp
repo/dicts/: jisho.cpp
repo/include/: game.hpp  games_repo.hpp  jisho.hpp  user.hpp  users_repo.hpp  word.hpp
repo/models/: game.cpp  user.cpp  word.cpp
service/: CMakeLists.txt  game_context.cpp  game_fabric.cpp  game_session.cpp  game_session_info.cpp  info_service.cpp  mapper.cpp  player_score.cpp
service/dto/: game_info.cpp  player_join_info.cpp  user_info.cpp  word_info.cpp
service/include/: game_context.hpp  game_fabric.hpp  game_info.hpp  game_session.hpp  game_session_info.hpp  handle_word_status.hpp  info_service.hpp  mapper.hpp  player_join_info.hpp  player_score.hpp  user_info.hpp  word_info.hpp
service/interfaces/: igame_session.hpp  iinfo_service.hpp
tests/: CMakeLists.txt  controller_test.cpp  full_server_test.cpp  network_test.cpp  repo_test.cpp  service_test.cpp
